--- a/notebook.html
+++ b/notebook.html
@@ -129,49 +129,37 @@ $(document).ready(function () {
 
 <div id="a-primeira-coisa-a-ser-feita-e-carregar-os-dados-em-um-dataframe" class="section level3">
 <h3>A primeira coisa a ser feita é carregar os dados em um DataFrame</h3>
-<pre class="r"><code>data = read.csv(file = &quot;data.csv&quot;, row.names = 1)
-data$weight.loss = data$initial.weight - data$final.weight 
+<pre class="r"><code>data = read.csv(file = &quot;data.csv&quot;, row.names = 1, stringsAsFactors = TRUE)
 data</code></pre>
 <div data-pagedtable="false">
 <script data-pagedtable-source type="application/json">
-{"columns":[{"label":[""],"name":["_rn_"],"type":[""],"align":["left"]},{"label":["gender"],"name":[1],"type":["fctr"],"align":["left"]},{"label":["age"],"name":[2],"type":["int"],"align":["right"]},{"label":["height"],"name":[3],"type":["int"],"align":["right"]},{"label":["diet.type"],"name":[4],"type":["fctr"],"align":["left"]},{"label":["initial.weight"],"name":[5],"type":["int"],"align":["right"]},{"label":["final.weight"],"name":[6],"type":["dbl"],"align":["right"]},{"label":["weight.loss"],"name":[7],"type":["dbl"],"align":["right"]}],"data":[{"1":"Female","2":"22","3":"159","4":"A","5":"58","6":"54.2","7":"3.8","_rn_":"1"},{"1":"Female","2":"46","3":"192","4":"A","5":"60","6":"54.0","7":"6.0","_rn_":"2"},{"1":"Female","2":"55","3":"170","4":"A","5":"64","6":"63.3","7":"0.7","_rn_":"3"},{"1":"Female","2":"33","3":"171","4":"A","5":"64","6":"61.1","7":"2.9","_rn_":"4"},{"1":"Female","2":"50","3":"170","4":"A","5":"65","6":"62.2","7":"2.8","_rn_":"5"},{"1":"Female","2":"50","3":"201","4":"A","5":"66","6":"64.0","7":"2.0","_rn_":"6"},{"1":"Female","2":"37","3":"174","4":"A","5":"67","6":"65.0","7":"2.0","_rn_":"7"},{"1":"Female","2":"28","3":"176","4":"A","5":"69","6":"60.5","7":"8.5","_rn_":"8"},{"1":"Female","2":"28","3":"165","4":"A","5":"70","6":"68.1","7":"1.9","_rn_":"9"},{"1":"Female","2":"45","3":"165","4":"A","5":"70","6":"66.9","7":"3.1","_rn_":"10"},{"1":"Female","2":"60","3":"173","4":"A","5":"72","6":"70.5","7":"1.5","_rn_":"11"},{"1":"Female","2":"48","3":"156","4":"A","5":"72","6":"69.0","7":"3.0","_rn_":"12"},{"1":"Female","2":"41","3":"163","4":"A","5":"72","6":"68.4","7":"3.6","_rn_":"13"},{"1":"Female","2":"37","3":"167","4":"A","5":"82","6":"81.1","7":"0.9","_rn_":"14"},{"1":"Female","2":"44","3":"174","4":"B","5":"58","6":"60.1","7":"-2.1","_rn_":"27"},{"1":"Female","2":"37","3":"172","4":"B","5":"58","6":"56.0","7":"2.0","_rn_":"28"},{"1":"Female","2":"41","3":"165","4":"B","5":"59","6":"57.3","7":"1.7","_rn_":"29"},{"1":"Female","2":"43","3":"171","4":"B","5":"61","6":"56.7","7":"4.3","_rn_":"30"},{"1":"Female","2":"20","3":"169","4":"B","5":"62","6":"55.0","7":"7.0","_rn_":"31"},{"1":"Female","2":"51","3":"174","4":"B","5":"63","6":"62.4","7":"0.6","_rn_":"32"},{"1":"Female","2":"31","3":"163","4":"B","5":"63","6":"60.3","7":"2.7","_rn_":"33"},{"1":"Female","2":"54","3":"173","4":"B","5":"63","6":"59.4","7":"3.6","_rn_":"34"},{"1":"Female","2":"50","3":"166","4":"B","5":"65","6":"62.0","7":"3.0","_rn_":"35"},{"1":"Female","2":"48","3":"163","4":"B","5":"66","6":"64.0","7":"2.0","_rn_":"36"},{"1":"Female","2":"16","3":"165","4":"B","5":"68","6":"63.8","7":"4.2","_rn_":"37"},{"1":"Female","2":"37","3":"167","4":"B","5":"68","6":"63.3","7":"4.7","_rn_":"38"},{"1":"Female","2":"30","3":"161","4":"B","5":"76","6":"72.7","7":"3.3","_rn_":"39"},{"1":"Female","2":"29","3":"169","4":"B","5":"77","6":"77.5","7":"-0.5","_rn_":"40"},{"1":"Female","2":"51","3":"165","4":"C","5":"60","6":"53.0","7":"7.0","_rn_":"52"},{"1":"Female","2":"35","3":"169","4":"C","5":"62","6":"56.4","7":"5.6","_rn_":"53"},{"1":"Female","2":"21","3":"159","4":"C","5":"64","6":"60.6","7":"3.4","_rn_":"54"},{"1":"Female","2":"22","3":"169","4":"C","5":"65","6":"58.2","7":"6.8","_rn_":"55"},{"1":"Female","2":"36","3":"160","4":"C","5":"66","6":"58.2","7":"7.8","_rn_":"56"},{"1":"Female","2":"20","3":"169","4":"C","5":"67","6":"61.6","7":"5.4","_rn_":"57"},{"1":"Female","2":"35","3":"163","4":"C","5":"67","6":"60.2","7":"6.8","_rn_":"58"},{"1":"Female","2":"45","3":"155","4":"C","5":"69","6":"61.8","7":"7.2","_rn_":"59"},{"1":"Female","2":"58","3":"141","4":"C","5":"70","6":"63.0","7":"7.0","_rn_":"60"},{"1":"Female","2":"37","3":"170","4":"C","5":"70","6":"62.7","7":"7.3","_rn_":"61"},{"1":"Female","2":"31","3":"170","4":"C","5":"72","6":"71.1","7":"0.9","_rn_":"62"},{"1":"Female","2":"35","3":"171","4":"C","5":"72","6":"64.4","7":"7.6","_rn_":"63"},{"1":"Female","2":"56","3":"171","4":"C","5":"73","6":"68.9","7":"4.1","_rn_":"64"},{"1":"Female","2":"48","3":"153","4":"C","5":"75","6":"68.7","7":"6.3","_rn_":"65"},{"1":"Female","2":"41","3":"157","4":"C","5":"76","6":"71.0","7":"5.0","_rn_":"66"},{"1":"Male","2":"39","3":"168","4":"A","5":"71","6":"71.6","7":"-0.6","_rn_":"15"},{"1":"Male","2":"31","3":"158","4":"A","5":"72","6":"70.9","7":"1.1","_rn_":"16"},{"1":"Male","2":"40","3":"173","4":"A","5":"74","6":"69.5","7":"4.5","_rn_":"17"},{"1":"Male","2":"50","3":"160","4":"A","5":"78","6":"73.9","7":"4.1","_rn_":"18"},{"1":"Male","2":"43","3":"162","4":"A","5":"80","6":"71.0","7":"9.0","_rn_":"19"},{"1":"Male","2":"25","3":"165","4":"A","5":"80","6":"77.6","7":"2.4","_rn_":"20"},{"1":"Male","2":"52","3":"177","4":"A","5":"83","6":"79.1","7":"3.9","_rn_":"21"},{"1":"Male","2":"42","3":"166","4":"A","5":"85","6":"81.5","7":"3.5","_rn_":"22"},{"1":"Male","2":"39","3":"166","4":"A","5":"87","6":"81.9","7":"5.1","_rn_":"23"},{"1":"Male","2":"40","3":"190","4":"A","5":"88","6":"84.5","7":"3.5","_rn_":"24"},{"1":"Male","2":"51","3":"191","4":"B","5":"71","6":"66.8","7":"4.2","_rn_":"41"},{"1":"Male","2":"38","3":"199","4":"B","5":"75","6":"72.6","7":"2.4","_rn_":"42"},{"1":"Male","2":"54","3":"196","4":"B","5":"75","6":"69.2","7":"5.8","_rn_":"43"},{"1":"Male","2":"33","3":"190","4":"B","5":"76","6":"72.5","7":"3.5","_rn_":"44"},{"1":"Male","2":"45","3":"160","4":"B","5":"78","6":"72.7","7":"5.3","_rn_":"45"},{"1":"Male","2":"37","3":"194","4":"B","5":"78","6":"76.3","7":"1.7","_rn_":"46"},{"1":"Male","2":"44","3":"163","4":"B","5":"79","6":"73.6","7":"5.4","_rn_":"47"},{"1":"Male","2":"40","3":"171","4":"B","5":"79","6":"72.9","7":"6.1","_rn_":"48"},{"1":"Male","2":"37","3":"198","4":"B","5":"79","6":"71.1","7":"7.9","_rn_":"49"},{"1":"Male","2":"39","3":"180","4":"B","5":"80","6":"81.4","7":"-1.4","_rn_":"50"},{"1":"Male","2":"31","3":"182","4":"B","5":"80","6":"75.7","7":"4.3","_rn_":"51"},{"1":"Male","2":"36","3":"155","4":"C","5":"71","6":"68.5","7":"2.5","_rn_":"67"},{"1":"Male","2":"47","3":"179","4":"C","5":"73","6":"72.1","7":"0.9","_rn_":"68"},{"1":"Male","2":"29","3":"166","4":"C","5":"76","6":"72.5","7":"3.5","_rn_":"69"},{"1":"Male","2":"37","3":"173","4":"C","5":"78","6":"77.5","7":"0.5","_rn_":"70"},{"1":"Male","2":"31","3":"177","4":"C","5":"78","6":"75.2","7":"2.8","_rn_":"71"},{"1":"Male","2":"26","3":"179","4":"C","5":"78","6":"69.4","7":"8.6","_rn_":"72"},{"1":"Male","2":"40","3":"179","4":"C","5":"79","6":"74.5","7":"4.5","_rn_":"73"},{"1":"Male","2":"35","3":"183","4":"C","5":"83","6":"80.2","7":"2.8","_rn_":"74"},{"1":"Male","2":"49","3":"177","4":"C","5":"84","6":"79.9","7":"4.1","_rn_":"75"},{"1":"Male","2":"28","3":"164","4":"C","5":"85","6":"79.7","7":"5.3","_rn_":"76"},{"1":"Male","2":"40","3":"167","4":"C","5":"87","6":"77.8","7":"9.2","_rn_":"77"},{"1":"Male","2":"51","3":"175","4":"C","5":"88","6":"81.9","7":"6.1","_rn_":"78"}],"options":{"columns":{"min":{},"max":[10]},"rows":{"min":[10],"max":[10]},"pages":{}}}
+{"columns":[{"label":[""],"name":["_rn_"],"type":[""],"align":["left"]},{"label":["treatment"],"name":[1],"type":["int"],"align":["right"]},{"label":["yeld"],"name":[2],"type":["int"],"align":["right"]},{"label":["rank"],"name":[3],"type":["int"],"align":["right"]}],"data":[{"1":"2","2":"2678","3":"1","_rn_":"1"},{"1":"3","2":"2552","3":"2","_rn_":"2"},{"1":"4","2":"2128","3":"3","_rn_":"3"},{"1":"1","2":"2127","3":"4","_rn_":"4"},{"1":"5","2":"1796","3":"5","_rn_":"5"},{"1":"6","2":"1681","3":"6","_rn_":"6"},{"1":"7","2":"1316","3":"7","_rn_":"7"}],"options":{"columns":{"min":{},"max":[10]},"rows":{"min":[10],"max":[10]},"pages":{}}}
   </script>
 </div>
 </div>
 <div id="antes-de-executarmos-o-mrt-precisamos-executar-anova.-iremos-guardar-o-resultado-a-anova-em-um-novo-dataframe" class="section level3">
 <h3>Antes de executarmos o MRT, precisamos executar ANOVA. Iremos guardar o resultado a ANOVA em um novo dataframe</h3>
-<pre class="r"><code>anova  = aov(weight.loss~diet.type,data=data)
+<pre class="r"><code>anova  = aov(yeld~treatment,data=data)
 anova</code></pre>
 <pre><code>## Call:
-##    aov(formula = weight.loss ~ diet.type, data = data)
+##    aov(formula = yeld ~ treatment, data = data)
 ## 
 ## Terms:
-##                 diet.type Residuals
-## Sum of Squares    60.5270  410.4018
-## Deg. of Freedom         2        73
+##                 treatment Residuals
+## Sum of Squares   959410.3  437683.1
+## Deg. of Freedom         1         5
 ## 
-## Residual standard error: 2.371064
+## Residual standard error: 295.8659
 ## Estimated effects may be unbalanced</code></pre>
 </div>
 <div id="execucao-do-mrt" class="section level3">
 <h3>Execução do MRT</h3>
-<pre class="r"><code>library(DescTools)
-PostHocTest(anova, method = &quot;duncan&quot;)</code></pre>
-<pre><code>## 
-##   Posthoc multiple comparisons of means : Duncan's new multiple range test 
-##     95% family-wise confidence level
-## 
-## $diet.type
-##          diff     lwr.ci   upr.ci   pval    
-## B-A -0.032000 -1.3824307 1.318431 0.9625    
-## C-A  1.848148  0.5224414 3.173855 0.0069 ** 
-## C-B  1.880148  0.5001554 3.260141 0.0076 ** 
-## 
-## ---
-## Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1</code></pre>
-<pre class="r"><code>#library(agricolae)
-#results &lt;- duncan.test(anova,&quot;Dieta&quot;,alpha=0.05,console=TRUE)
-#plot(results,horiz=TRUE,las=1)</code></pre>
+<pre class="r"><code>#library(DescTools)
+#PostHocTest(anova, method = &quot;duncan&quot;)
+library(agricolae)
+duncan.test(anova,&quot;Dieta&quot;,alpha=0.05)</code></pre>
+<pre><code>## NULL</code></pre>
+<pre class="r"><code>#plot(results,horiz=TRUE,las=1)</code></pre>
 </div>
 
 
